# Qml_mini_app

./: CMakeLists.txt  main.cpp  networkmanager.cpp  networkmanager.h
qml/: main.qml
